--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -19,3 +19,6 @@ layout: default
 			{% endif %}
 	{% endfor %}
 </div>
+
+{% include nav-projects.html %} <!--this allows nav-rpojects to be included in projects page, this is done because we don't want this on every page, just some (won't be in
+									any of the posts-->
