--- a/_includes/nav-projects.html
+++ b/_includes/nav-projects.html
@@ -9,4 +9,12 @@
 		<a href="{{ site.baseurl }}/projects/api/">
 			API
 	</li>
+
+	<li>
+		<a href="{{ site.baseurl }}/projects/web/">
+			Cool Internet Stuff
+	</li>
+
+
+
 </ul>
