--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,10 +2,12 @@
 <html>
 	<head>
 		<title>{{ page.title }}</title>
-		<link rel="stylesheets" href="{{ site.baseurl }}/assets/css/main.css">  <!--Since this is a template, it needs to be a root-relative link-->
-		 <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/bootstrap.min.css">
-        <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/bootstrap-theme.css">
-		<script type="text/javascript" src="{{ site.baseurl }}/assets/js/bootstrap.js"></script>
+		 <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="{{ site.baseurl }}/assets/fonts/arq.css">
+		<link rel="stylesheets" href="{{ site.baseurl }}/assets/css/real.css">  <!--Since this is a template, it needs to be a root-relative link-->
         <script type="text/javascript" src="{{ site.baseurl }}/assets/js/vendor/modernizr-2.6.2.min.js"></script>
 		
 	</head>
