--- a/assets/css/real.css
+++ b/assets/css/real.css
@@ -104,19 +104,27 @@ a:hover {
  */
 h1 {
   font-size: 2em;
-  margin: 0.67em 0; }
+  margin: 0.67em 0; 
+  font-family: "ArquitectaMedium", Helvetica, Arial, sans-serif;
+  }
 
 h2 {
   font-size: 1.5em;
-  margin: 0.83em 0; }
+  margin: 0.83em 0; 
+   font-family: "ArquitectaMedium", Helvetica, Arial, sans-serif;
+  }
 
 h3 {
   font-size: 1.1em;
-  margin: 1em 0; }
+  margin: 1em 0;
+   font-family: "ArquitectaMedium", Helvetica, Arial, sans-serif;
+   }
 
 h4 {
   font-size: 1em;
-  margin: 1.33em 0; }
+  margin: 1.33em 0;
+   font-family: "ArquitectaMedium", Helvetica, Arial, sans-serif;
+   }
 
 h5 {
   font-size: 0.83em;
