--- a/assets/css/real.css
+++ b/assets/css/real.css
@@ -133,6 +133,11 @@ h5 {
 h6 {
   font-size: 0.67em;
   margin: 2.33em 0; }
+  
+ p {
+	   font-family: "ArquitectaMedium", Helvetica, Arial, sans-serif;
+	 
+ }
 
 
  
