--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheets" href="{{ site.baseurl }}/assets/fonts/arq.css">
-		<link rel="stylesheets" href="{{ site.baseurl }}/assets/css/main.css">  <!--Since this is a template, it needs to be a root-relative link-->
+		<link rel="stylesheets" href="{{ site.baseurl }}/assets/css/syntax.css">  <!--Since this is a template, it needs to be a root-relative link-->
         <script type="text/javascript" src="{{ site.baseurl }}/assets/js/vendor/modernizr-2.6.2.min.js"></script>
 		
 	</head>
