--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,9 +6,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="{{ site.baseurl }}/assets/fonts/arq.css">
-		<link rel="stylesheet" href="assets/css/main.css">  <!--Since this is a template, it needs to be a root-relative link-->
-        <script type="text/javascript" src="{{ site.baseurl }}/assets/js/vendor/modernizr-2.6.2.min.js"></script>
+		<link rel='stylesheet' href='{{ site.baseurl }}/assets/fonts/arq.css' 'text/css'>
+		<link rel='stylesheet' href='{{ site.baseurl }}/assets/css/main.css' type='text/css'>  <!--Since this is a template, it needs to be a root-relative link-->
+        <script type='text/javascript' src='{{ site.baseurl }}/assets/js/vendor/modernizr-2.6.2.min.js'></script>-->
+        
 		
 	</head>
 
