--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -134,14 +134,14 @@ h6 {
   font-size: 0.67em;
   margin: 2.33em 0; }
   
- p {
+ article {
 	   font-family: "ArquitectaMedium", Helvetica, Arial, sans-serif;
 	 
  }
 
 
  
-  font-family: "ArquitectaMedium", Helvetica, Arial, sans-serif;
+ 
   
   textarea {
   font-family: inherit;
