--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -111,7 +111,7 @@ h1 {
 h2 {
   font-size: 1.5em;
   margin: 0.83em 0; 
-   font-family: "ArquitectaMedium", Helvetica, Arial, sans-serif;
+   font-family: Helvetica;
   }
 
 h3 {
@@ -135,7 +135,7 @@ h6 {
   margin: 2.33em 0; }
   
  article {
-	   font-family: "ArquitectaMedium", Helvetica, Arial, sans-serif;
+	   font-family: Helvetica;
 	 
  }
 
