--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,20 @@
 		<link rel='stylesheet' href='{{ site.baseurl }}/assets/css/main.css' type='text/css'>  <!--Since this is a template, it needs to be a root-relative link-->
         <script type='text/javascript' src='{{ site.baseurl }}/assets/js/vendor/modernizr-2.6.2.min.js'></script>-->
         
+        <style>
+    body {
+	font-family: 'ArquitectaMedium', helvetica, sans-serif;
+	}
+
+h1 {
+	color: #4974B2;
+	font-weight: 400;
+	margin-top: 30px;
+	margin-left: 15px;
+	font-size: 30px;
+	}
+
+</style>
 		
 	</head>
 
