--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,15 @@ h1 {
 	font-size: 30px;
 	}
 
+h2 {
+	color: pink;
+	font-weight: 400;
+	margin-top: 30px;
+	margin-left: 15px;
+	font-size: 30px;
+	font-family: 'Helvetica';
+	}
+	
 </style>
 		
 	</head>
