--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,15 +8,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel='stylesheet' href='{{ site.baseurl }}/assets/fonts/arq.css' 'text/css'>
 		<link rel='stylesheet' href='{{ site.baseurl }}/assets/css/main.css' type='text/css'>  <!--Since this is a template, it needs to be a root-relative link-->
-        <script type='text/javascript' src='{{ site.baseurl }}/assets/js/vendor/modernizr-2.6.2.min.js'></script>-->
+        <script type='text/javascript' src='{{ site.baseurl }}/assets/js/vendor/modernizr-2.6.2.min.js'></script>
         
-        <style>
+        <style type="text/css">
     body {
 	font-family: 'ArquitectaMedium', helvetica, sans-serif;
 	}
 
 h1 {
-	color: #4974B2;
+	color: pink;
 	font-weight: 400;
 	margin-top: 30px;
 	margin-left: 15px;
