--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,8 @@
 		{{ content }}  <!--content is a specia lreserved word in liquid which means to take everything from our templaste page into this page-->
 	</body>
 	
+		 <script src='{{ site.baseurl }}/assets/js/vendor/bootstrap.js'></script>
 	    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+        <script src='{{ site.baseurl }}/assets/js/plugins.js'></script>
+        <script src='{{ site.baseurl }}/assets/js/main.js'></script>
 </html>
