--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,9 @@
 	</head>
 
 	<body>
-		
+		<div class="container">
 		{{ content }}  <!--content is a specia lreserved word in liquid which means to take everything from our templaste page into this page-->
+		</div>
 	</body>
 	
 		 <script src='{{ site.baseurl }}/assets/js/vendor/bootstrap.js'></script>
