--- a/assets/css/normalize.css
+++ b/assets/css/normalize.css
@@ -124,7 +124,7 @@ a:hover {
  */
 
 h1 {
-  font-size: 2em;
+  font-size: 3em;
   margin: 0.67em 0; 
   font-family: "ArquitectaMedium", Helvetica, Arial, sans-serif;
   }
@@ -133,6 +133,7 @@ h2 {
   font-size: 1.5em;
   margin: 0.83em 0; 
    font-family: "ArquitectaThin", Helvetica;
+   color: green;
   }
 
 h3 {
