--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,7 +15,7 @@ button,
 input,
 select,
 textarea {
-    color: pink;
+    color: #FF5498;
 }
 
 html {
@@ -113,7 +113,6 @@ h2 {
 color: green;
 
 }
-
 
 
 
