--- a/assets/css/normalize.css
+++ b/assets/css/normalize.css
@@ -131,7 +131,7 @@ h1 {
 
 h2 {
   font-size: 2.5em;
-  margin: -15px 0; 
+  margin: 0.83em 0; 
    font-family: "ArquitectaThin", Helvetica;
    color: green;
   }
