--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -117,7 +117,8 @@ color: purple;
 
 time{
 	color: #FF5498;
-	font-size: 0.8em;
+	font-size: 0.6em;
+	font-family: "ArquitectaLight"
 }
 
 h2.time{
