--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
         		
 	</head>
 
-	<body>
+	<body style="background-image: url(background.jpg);">
 		<div class="container">
 		
 		{{ content }}  <!--content is a specia lreserved word in liquid which means to take everything from our templaste page into this page-->
