--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -131,7 +131,7 @@ h2.time{
 }
 
 .nav{
-	padding-left: -15px;
+	
 	line-height: 1.3;
 	font-size: 1.1em;
 	margin-left: -40px;
@@ -351,6 +351,7 @@ grid system
 */
 
 .container {
+fill: white;
   margin-right: auto;
   margin-left: auto;
   padding-left: 50px;
