--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
         		
 	</head>
 
-	<body style="background-image: src='{{ site.baseurl }}/assets/images/back.png');">
+	<body style="background-image: url(back.png);">
 		<div class="container">
 		
 		{{ content }}  <!--content is a specia lreserved word in liquid which means to take everything from our templaste page into this page-->
