--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -150,7 +150,11 @@ header{
 
 
 
-body {background-color:yellow;}
+body {background-color:blue;}
+
+.container{
+	background-color: white;
+}
 
 
 
