--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -150,10 +150,10 @@ header{
 
 
 
-body {background-color:blue;}
+body {background-color:pink;}
 
 .container{
-	background-color: white;
+	fill: white;
 }
 
 
