--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -161,7 +161,9 @@ body {background-color:pink;}
 	
 }
 
-
+.img{
+	width: 600px;
+}
 
 
 /* ==========================================================================
