--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -168,6 +168,7 @@ body {background-color:pink;}
 .birth p{
 	line-height: 1.2;
 	width: 500px;
+	background-color: white;
 }
 
 /* ==========================================================================
