--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -168,7 +168,7 @@ body {background-color:pink;}
 .birth p{
 	line-height: 1.2;
 	width: 500px;
-	background-color: (255, 255, 255, 0.6);
+	background-color: rgba(255,255,255,0.6);
 }
 
 /* ==========================================================================
