--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -99,6 +99,7 @@ textarea {
 
    body {
 font-family: 'ArquitectaMedium', helvetica, sans-serif;
+background-image: url('ground-01.jpg');
 }
 
 h1 {
@@ -168,7 +169,7 @@ body {background-color:pink;}
 .birth p{
 	line-height: 1.2;
 	width: 500px;
-	background-color: rgba(255,255,255,0.6);
+	
 }
 
 /* ==========================================================================
